--- a/src/index.css
+++ b/src/index.css
@@ -43,3 +43,54 @@ code {
   text-overflow: ellipsis;
   transition: all 0.3s ease;
 }
+
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: #555;
+}
+
+::-moz-scrollbar {
+  width: 8px;
+}
+
+::-moz-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-moz-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+::-moz-scrollbar-thumb:hover {
+  background: #555;
+}
+
+::-ms-scrollbar {
+  width: 8px;
+}
+
+::-ms-scrollbar-track {
+  background: #f1f1f1;
+}
+
+::-ms-scrollbar-thumb {
+  background: #888;
+  border-radius: 4px;
+}
+
+::-ms-scrollbar-thumb:hover {
+  background: #555;
+}
