--- a/src/index.css
+++ b/src/index.css
@@ -106,3 +106,8 @@ code {
         size: landscape;
     }
 }
+
+.highlight {
+  border: 3px solid #ff3c00; /* Gold color for highlighting */
+  transition: border 0.3s ease;
+}
