--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  height: calc(var(--vh, 1vh) * 100);
 }
 
 html,
@@ -57,6 +56,7 @@ code {
 
 ::-webkit-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 ::-webkit-scrollbar-track {
@@ -74,6 +74,7 @@ code {
 
 ::-moz-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 ::-moz-scrollbar-track {
@@ -91,6 +92,7 @@ code {
 
 ::-ms-scrollbar {
   width: 8px;
+  height: 8px;
 }
 
 ::-ms-scrollbar-track {
@@ -116,14 +118,3 @@ code {
   border: 3px solid #ff3c00; /* Gold color for highlighting */
   transition: border 0.3s ease;
 }
-```
-
-<script>
-    function setVhProperty() {
-        document.documentElement.style.setProperty('--vh', `${window.innerHeight * 0.01}px`);
-    }
-
-    window.addEventListener('resize', setVhProperty);
-    window.addEventListener('orientationchange', setVhProperty);
-    setVhProperty();
-</script>
